docker/docker-crash-v2/old-tws/online_shopping_app/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: osp-deployment
  namespace: osp-ns
  labels:
    app: osp-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: osp-app

  template:
    metadata:
      name: osp-pod
      namespace: osp-ns
      labels:
        app: osp-app

    spec:
      containers:
      - name: osp-con
        image: trainwithshubham/online_shop_app:latest
        ports: 
        - containerPort: 5173
