docker/docker-crash-v2/old-tws/online_shopping_app/k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: osp-svc
  namespace: osp-ns

spec:
  selector:
    app: osp-app
  ports:
  - protocol: TCP
    port: 5173 # service / cluster
    targetPort: 5173 # pod
