docker/docker-crash-v2/old-tws/online_shopping_app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: osp-ing
  namespace: osp-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /shop
        backend:
          service:
            name: osp-svc
            port:
              number: 5173
